# BiliTools-Remake

./: .gitignore  README.md  bilitools-cli.py  pyproject.toml  requirements.txt  requirements_dev.txt  utils.py
asyncbiliapis/: danmaku_tracker.py  wbi.py
biliapis/: __init__.py  bilicodes.py  checker.py  constants.py  error.py  factory.py  factory.pyi  reqcache.py  subtitle.py  template.py  utils.py  wbi.py
biliapis/apis/: __init__.py  audio.py  audio.pyi  login.py  login.pyi  manga.py  manga.pyi  media.py  media.pyi  video.py  video.pyi
bilicli/: __init__.py  __main__.py  app.py  bootstrap.py  core.py  hints.py  login.py  printers.py  process.py  svld.py  utils.py
bilicore/: __init__.py  core.py  downloader.py  manager.py  parser.py  threads.py  utils.py
core/: downloader.py
src/asyncbiliapis/: utils.py  wbi.py
src/asyncbiliapis/objects/: video.py
tests/: initapis.py  test_audioapis.py  test_comicapis.py  test_downloadcore.py  test_downloader.py  test_downloadvideo.py  test_fallback.py  test_loginapis.py  test_mediaapis.py  test_selectdash.py  test_videoapis.py  video_streams_with_flac.json
