[project]
name = "BiliTools-Remake"
version = "1.0.0"
description = "A simple media downloader for Bilibili"
authors = [
    {name = "NingmengLemon", email = "60469383+NingmengLemon@users.noreply.github.com"},
]
dependencies = [
    "pycryptodome>=3.21.0",
    "tqdm>=4.66.5",
    "qrcode>=8.0",
    "aiosqlite>=0.21.0",
    "sqlmodel>=0.0.22",
    "sqlalchemy>=2.0.38",
    "aiohttp>=3.11.13",
]
requires-python = ">=3.12,<3.13"
readme = "README.md"
license = {text = "AGPL3"}


[project.optional-dependencies]
dist = [
    "pyinstaller>=6.11.0",
    "nuitka>=2.4.11",
]
[tool.pdm]
distribution = false


[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "types-qrcode>=8.0.0.20241004",
    "types-tqdm>=4.66.0.20240417",
    "pytest>=8.3.3",
    "pytest-asyncio>=0.25.3",
]
